--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,68 @@
+@import "reset.css"; /* no margin */
+body {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: flex-start;
+    background-color: gainsboro;
+    padding: 20px 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.btns {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 canvas {
     width: 800px;
     height: 800px;
-    border: 5px solid black;
+    background-color: white;
+    border-radius: 15px;
 }
 body {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.color-options {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+}
 .color-option {
     width: 50px;
     height: 50px;
+    border-radius: 50px;
     cursor: pointer; /*마우스 클릭 가능 표시*/
+    border: 5px solid white;
+    transition: transform ease-in-out .1s;
+}
+.color-option:hover {
+    transform: scale(1.2);
+}
+button, label {
+    all: unset; /*css리셋*/
+    padding: 10px 0px;
+    text-align: center;
+    background-color: dodgerblue;
+    color: white;
+    font-weight: 500;
+    cursor: pointer; /*커서*/
+    border-radius: 10px;
+    transition: opacity linear .3s;
+}
+button:hover {
+    opacity: 0.85;
+}
+input#file{
+    display: none;
+}
+input#text {
+    all: unset;
+    padding: 10px 0px;
+    font-weight: 500;
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
 }
